--- a/libstdc++-v3/Makefile.in
+++ b/libstdc++-v3/Makefile.in
@@ -445,7 +445,7 @@ check-script-install: $(top_builddir)/mkcheck
 	  cd testsuite; \
 	  @glibcpp_builddir@/mkcheck 1)
 check-abi: $(top_builddir)/testsuite/abi_check
-	-(cd testsuite; \
+	-@(cd testsuite; \
 	  ${top_srcdir}/config/abi/extract_symvers \
 	     ../src/.libs/libstdc++.so \
 	     ./current_symbols.txt; \
