* Makefile.in: Rebuilt. 	* Makefile.am (awt_java_source_files): Added new files.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -852,10 +852,12 @@ java/awt/Robot.java \
 java/awt/ScrollPaneAdjustable.java \
 java/awt/Stroke.java \
 java/awt/TexturePaint.java \
+java/awt/dnd/peer/DragSourceContextPeer.java \
+java/awt/dnd/peer/DropTargetContextPeer.java \
 java/awt/dnd/DnDConstants.java \
 java/awt/dnd/DragGestureEvent.java \
 java/awt/dnd/DragGestureListener.java \
-java/awt/dnd/DragGestureRecognizer.java \
+java/awt/dnd/DragGestureRecognizer.java	\
 java/awt/dnd/DragSource.java \
 java/awt/dnd/DragSourceAdapter.java \
 java/awt/dnd/DragSourceContext.java \
@@ -865,7 +867,15 @@ java/awt/dnd/DragSourceListener.java \
 java/awt/dnd/DragSourceMotionListener.java \
 java/awt/dnd/DropTarget.java \
 java/awt/dnd/InvalidDnDOperationException.java \
-java/awt/dnd/peer/DragSourceContextPeer.java \
+java/awt/dnd/Autoscroll.java \
+java/awt/dnd/DragSourceDropEvent.java \
+java/awt/dnd/DropTargetAdapter.java \
+java/awt/dnd/DropTargetContext.java \
+java/awt/dnd/DropTargetDragEvent.java \
+java/awt/dnd/DropTargetDropEvent.java \
+java/awt/dnd/DropTargetEvent.java \
+java/awt/dnd/DropTargetListener.java \
+java/awt/dnd/MouseDragGestureRecognizer.java \
 java/awt/font/TextHitInfo.java \
 java/awt/im/spi/InputMethod.java \
 java/awt/im/spi/InputMethodContext.java \
