--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -609,10 +609,12 @@ java/awt/Robot.java \
 java/awt/ScrollPaneAdjustable.java \
 java/awt/Stroke.java \
 java/awt/TexturePaint.java \
+java/awt/dnd/peer/DragSourceContextPeer.java \
+java/awt/dnd/peer/DropTargetContextPeer.java \
 java/awt/dnd/DnDConstants.java \
 java/awt/dnd/DragGestureEvent.java \
 java/awt/dnd/DragGestureListener.java \
-java/awt/dnd/DragGestureRecognizer.java \
+java/awt/dnd/DragGestureRecognizer.java	\
 java/awt/dnd/DragSource.java \
 java/awt/dnd/DragSourceAdapter.java \
 java/awt/dnd/DragSourceContext.java \
@@ -622,7 +624,15 @@ java/awt/dnd/DragSourceListener.java \
 java/awt/dnd/DragSourceMotionListener.java \
 java/awt/dnd/DropTarget.java \
 java/awt/dnd/InvalidDnDOperationException.java \
-java/awt/dnd/peer/DragSourceContextPeer.java \
+java/awt/dnd/Autoscroll.java \
+java/awt/dnd/DragSourceDropEvent.java \
+java/awt/dnd/DropTargetAdapter.java \
+java/awt/dnd/DropTargetContext.java \
+java/awt/dnd/DropTargetDragEvent.java \
+java/awt/dnd/DropTargetDropEvent.java \
+java/awt/dnd/DropTargetEvent.java \
+java/awt/dnd/DropTargetListener.java \
+java/awt/dnd/MouseDragGestureRecognizer.java \
 java/awt/font/TextHitInfo.java \
 java/awt/im/spi/InputMethod.java \
 java/awt/im/spi/InputMethodContext.java \
@@ -2580,18 +2590,27 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/awt/datatransfer/SystemFlavorMap.P \
 .deps/java/awt/datatransfer/Transferable.P \
 .deps/java/awt/datatransfer/UnsupportedFlavorException.P \
-.deps/java/awt/dnd/DnDConstants.P .deps/java/awt/dnd/DragGestureEvent.P \
+.deps/java/awt/dnd/Autoscroll.P .deps/java/awt/dnd/DnDConstants.P \
+.deps/java/awt/dnd/DragGestureEvent.P \
 .deps/java/awt/dnd/DragGestureListener.P \
 .deps/java/awt/dnd/DragGestureRecognizer.P \
 .deps/java/awt/dnd/DragSource.P .deps/java/awt/dnd/DragSourceAdapter.P \
 .deps/java/awt/dnd/DragSourceContext.P \
 .deps/java/awt/dnd/DragSourceDragEvent.P \
+.deps/java/awt/dnd/DragSourceDropEvent.P \
 .deps/java/awt/dnd/DragSourceEvent.P \
 .deps/java/awt/dnd/DragSourceListener.P \
 .deps/java/awt/dnd/DragSourceMotionListener.P \
-.deps/java/awt/dnd/DropTarget.P \
+.deps/java/awt/dnd/DropTarget.P .deps/java/awt/dnd/DropTargetAdapter.P \
+.deps/java/awt/dnd/DropTargetContext.P \
+.deps/java/awt/dnd/DropTargetDragEvent.P \
+.deps/java/awt/dnd/DropTargetDropEvent.P \
+.deps/java/awt/dnd/DropTargetEvent.P \
+.deps/java/awt/dnd/DropTargetListener.P \
 .deps/java/awt/dnd/InvalidDnDOperationException.P \
+.deps/java/awt/dnd/MouseDragGestureRecognizer.P \
 .deps/java/awt/dnd/peer/DragSourceContextPeer.P \
+.deps/java/awt/dnd/peer/DropTargetContextPeer.P \
 .deps/java/awt/event/AWTEventListener.P \
 .deps/java/awt/event/AWTEventListenerProxy.P \
 .deps/java/awt/event/ActionEvent.P \
