* gcc.c (set_multilib_dir): Don't access *end. 	Use memcpy instead of strncpy.  Don't write beyond malloced buffer. 	(print_multilib_info): Don't show paths starting with ".:". 	* genmultilib: Add new option, "yes" if multilibs are enabled. 	Update comments.  If multilibs not enabled, print .:${osdirout} 	for each directory.  If multilibs are enabled, always print 	${dirout}:${osdirout}, even if the two are the same. 	* Makefile.in (s-mlib): Pass @enable_multilib@ to genmultilib. 	Pass all MULTILIB_* variables to genmultilib even if 	--disable-multilib but MULTILIB_OSDIRNAMES is not empty.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57846 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1061,7 +1061,8 @@ libgcc.a: $(LIBGCC_DEPS)
 # switches.
 multilib.h: s-mlib; @true
 s-mlib: $(srcdir)/genmultilib Makefile
-	if test @enable_multilib@ = yes; then \
+	if test @enable_multilib@ = yes \
+	   || test -n "$(MULTILIB_OSDIRNAMES)"; then \
 	  $(SHELL) $(srcdir)/genmultilib \
 	    "$(MULTILIB_OPTIONS)" \
 	    "$(MULTILIB_DIRNAMES)" \
@@ -1070,9 +1071,11 @@ s-mlib: $(srcdir)/genmultilib Makefile
 	    "$(MULTILIB_EXTRA_OPTS)" \
 	    "$(MULTILIB_EXCLUSIONS)" \
 	    "$(MULTILIB_OSDIRNAMES)" \
+	    "@enable_multilib@" \
 	    > tmp-mlib.h; \
 	else \
-	  $(SHELL) $(srcdir)/genmultilib '' '' '' '' '' '' '' > tmp-mlib.h; \
+	  $(SHELL) $(srcdir)/genmultilib '' '' '' '' '' '' '' no \
+	    > tmp-mlib.h; \
 	fi
 	$(SHELL) $(srcdir)/move-if-change tmp-mlib.h multilib.h
 	$(STAMP) s-mlib
