Buffer.java: New stub file.
2002-10-07  Michael Koch  <konqueror@gmx.de>

	* java/nio/Buffer.java: New stub file.
	* java/nio/charset/spi/CharsetProvider.java: Commented out all usages
	of class Charset.
	* Makefile.am (java_native_source_files): Added java/nio/Buffer.java.
	* Makefile.in: Regenerated.

From-SVN: r57901

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1956,6 +1956,7 @@ java/net/URLStreamHandler.java \
 java/net/URLStreamHandlerFactory.java \
 java/net/UnknownHostException.java \
 java/net/UnknownServiceException.java \
+java/nio/Buffer.java \
 java/nio/ByteBuffer.java \
 java/nio/MappedByteBuffer.java \
 java/nio/channels/AlreadyConnectedException.java \
