re PR c++/10635 (ICE (segfault) when dereferencing an incomplete type casted from a void pointer)
	PR c++/10635
	* typeck.c (build_c_cast): Check that the destination type is
	complete.

	PR c++/10635
	* g++.dg/expr/cast1.C: New test.

[[Split portion of a mixed commit.]]

From-SVN: r67840.1

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -275,7 +275,7 @@ cp/semantics.o: cp/semantics.c $(CXX_TREE_H) cp/lex.h except.h toplev.h \
 cp/dump.o: cp/dump.c $(CXX_TREE_H) tree-dump.h
 cp/optimize.o: cp/optimize.c $(CXX_TREE_H) rtl.h integrate.h insn-config.h \
   input.h $(PARAMS_H) debug.h tree-inline.h
-cp/mangle.o: cp/mangle.c $(CXX_TREE_H) toplev.h real.h
+cp/mangle.o: cp/mangle.c $(CXX_TREE_H) toplev.h real.h $(TM_P_H)
 
 cp/parse.o: cp/parse.c $(CXX_TREE_H) flags.h cp/lex.h except.h output.h \
 	cp/decl.h $(SYSTEM_H) toplev.h $(GGC_H) gt-cp-parse.h
