--- a/libstdc++-v3/testsuite/Makefile.am
+++ b/libstdc++-v3/testsuite/Makefile.am
@@ -23,6 +23,8 @@
 
 AUTOMAKE_OPTIONS =  cygnus dejagnu
 
+mkinstalldirs = $(SHELL) $(toplevel_srcdir)/mkinstalldirs
+
 DEJATOOL = libstdc++-v3
 
 EXPECT = `if [ -f @glibcpp_builddir@/../../expect/expect ] ; then \
@@ -55,7 +57,7 @@ libv3test_a_SOURCES = testsuite_hooks.cc testsuite_allocator.cc
 
 ## Build support utilities.
 ## Only build this as native, as need to find startup files and libc to link.
-if GLIBCPP_BUILD_ABI_CHECK
+if GLIBCPP_TEST_ABI
 noinst_PROGRAMS = abi_check
 else
 noinst_PROGRAMS = 
@@ -69,8 +71,54 @@ else
 all-local:
 endif
 
+# Override this so local rules are possible.
+check-am: 
+	$(MAKE) $(AM_MAKEFLAGS) check-DEJAGNU; \
+	$(MAKE) $(AM_MAKEFLAGS) check-local 
+
+check-local: check-abi
+
 stamp_wchar:
 	touch testsuite_wchar_t
+
+baseline_dir = @baseline_dir@
+baseline_file = ${baseline_dir}/baseline_symbols.txt
+extract_symvers = @glibcpp_srcdir@/config/abi/extract_symvers
+
+current_symbols.txt: ${extract_symvers} ../src/.libs/libstdc++.so
+	  -@(${extract_symvers} ../src/.libs/libstdc++.so current_symbols.txt)
+
+baseline_symbols:
+	-@(output=${baseline_file}; \
+	  if test ! -f $${output}; then \
+	    echo "Baseline file doesn't exist."; \
+	    echo "Try 'make new-abi-baseline' to create it."; \
+	    exit 1; \
+	  fi; \
+	touch baseline_symbols)
+
+new-abi-baseline: 
+	-@$(mkinstalldirs) ${baseline_dir}
+	-@(output=${baseline_file}; \
+	  if test -f $${output}; then \
+	    output=$${output}.new; \
+	    t=`echo $${output} | sed 's=.*config/abi/=='`; \
+	    echo "Baseline file already exists, writing to $${t} instead."; \
+	  fi; \
+	  ${extract_symvers} ../src/.libs/libstdc++.so $${output})
+
+if GLIBCPP_TEST_ABI
+# Use 'new-abi-baseline' to create an initial symbol file.  Then run
+# 'check-abi' to test for changes against that file.
+check-abi: abi_check baseline_symbols current_symbols.txt
+	-@(./abi_check --check ./current_symbols.txt ${baseline_file})
+
+check-abi-verbose: abi_check baseline_symbols current_symbols.txt 
+	-@(./abi_check --check-verbose ./current_symbols.txt ${baseline_file})
+else
+check-abi:
+check-abi-verbose:
+endif
 
 # By adding these files here, automake will remove them for 'make clean'
 CLEANFILES = *.txt *.tst *.exe core* filebuf_* tmp* ostream_* *.log *.sum \
