--- a/libstdc++-v3/testsuite/Makefile.am
+++ b/libstdc++-v3/testsuite/Makefile.am
@@ -111,10 +111,12 @@ if GLIBCPP_TEST_ABI
 # Use 'new-abi-baseline' to create an initial symbol file.  Then run
 # 'check-abi' to test for changes against that file.
 check-abi: abi_check baseline_symbols current_symbols.txt
-	-@(./abi_check --check ./current_symbols.txt ${baseline_file})
+	-@(./abi_check --check ./current_symbols.txt ${baseline_file} \
+	2>&1 | tee libstdc++-v3-abi.sum)
 
 check-abi-verbose: abi_check baseline_symbols current_symbols.txt 
-	-@(./abi_check --check-verbose ./current_symbols.txt ${baseline_file})
+	-@(./abi_check --check-verbose ./current_symbols.txt ${baseline_file} \
+	2>&1 | tee libstdc++-v3-abi.sum)
 else
 check-abi:
 check-abi-verbose:
