--- a/libstdc++-v3/testsuite/Makefile.in
+++ b/libstdc++-v3/testsuite/Makefile.in
@@ -148,10 +148,14 @@ mkinstalldirs = $(SHELL) $(toplevel_srcdir)/mkinstalldirs
 
 DEJATOOL = libstdc++-v3
 
-EXPECT = `if [ -f @glibcpp_builddir@/../../expect/expect ] ; then             echo @glibcpp_builddir@/../../expect/expect ;           else echo expect ; fi`
+EXPECT = `if [ -f @glibcpp_builddir@/../../expect/expect ] ; then \
+            echo @glibcpp_builddir@/../../expect/expect ; \
+          else echo expect ; fi`
 
 
-RUNTEST = `if [ -f @glibcpp_srcdir@/../dejagnu/runtest ] ; then 	       echo @glibcpp_srcdir@/../dejagnu/runtest ; 	    else echo runtest; fi`
+RUNTEST = `if [ -f @glibcpp_srcdir@/../dejagnu/runtest ] ; then \
+	       echo @glibcpp_srcdir@/../dejagnu/runtest ; \
+	    else echo runtest; fi`
 
 
 AM_RUNTESTFLAGS = 
@@ -159,15 +163,20 @@ RUNTESTFLAGS =
 
 CXX_build = @glibcpp_CXX@ 
 CXX = `echo "$(CXX_build)" | sed 's,gcc/xgcc ,gcc/g++ ,'`
-CXXLINK =  	LD_RUN_PATH=$${LD_RUN_PATH:+$$LD_RUN_PATH:}${glibcpp_builddir}/src/.libs 	$(LIBTOOL) --tag=CXX --mode=link $(CXX) 	$(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
+CXXLINK = \
+	LD_RUN_PATH=$${LD_RUN_PATH:+$$LD_RUN_PATH:}${glibcpp_builddir}/src/.libs\
+	$(LIBTOOL) --tag=CXX --mode=link $(CXX) \
+	$(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
 
 
-INCLUDES =  	-nostdinc++ 	@GLIBCPP_INCLUDES@ @LIBSUPCXX_INCLUDES@ @TOPLEVEL_INCLUDES@ 
+INCLUDES = \
+	-nostdinc++ \
+	@GLIBCPP_INCLUDES@ @LIBSUPCXX_INCLUDES@ @TOPLEVEL_INCLUDES@ 
 
 
 noinst_LIBRARIES = libv3test.a
 libv3test_a_SOURCES = testsuite_hooks.cc testsuite_allocator.cc
-@GLIBCPP_TEST_ABI_TRUE@noinst_PROGRAMS = abi_check
+@GLIBCPP_TEST_ABI_TRUE@noinst_PROGRAMS = @GLIBCPP_TEST_ABI_TRUE@abi_check
 @GLIBCPP_TEST_ABI_FALSE@noinst_PROGRAMS = 
 abi_check_SOURCES = abi_check.cc
 
@@ -176,7 +185,8 @@ baseline_file = ${baseline_dir}/baseline_symbols.txt
 extract_symvers = @glibcpp_srcdir@/config/abi/extract_symvers
 
 # By adding these files here, automake will remove them for 'make clean'
-CLEANFILES = *.txt *.tst *.exe core* filebuf_* tmp* ostream_* *.log *.sum 	     testsuite_files testsuite_wchar_t site.exp abi_check 
+CLEANFILES = *.txt *.tst *.exe core* filebuf_* tmp* ostream_* *.log *.sum \
+	     testsuite_files testsuite_wchar_t site.exp abi_check 
 
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
@@ -206,7 +216,7 @@ DIST_COMMON =  README Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = tar
+TAR = gtar
 GZIP_ENV = --best
 SOURCES = $(libv3test_a_SOURCES) $(abi_check_SOURCES)
 OBJECTS = $(libv3test_a_OBJECTS) $(abi_check_OBJECTS)
@@ -499,10 +509,12 @@ new-abi-baseline:
 # Use 'new-abi-baseline' to create an initial symbol file.  Then run
 # 'check-abi' to test for changes against that file.
 @GLIBCPP_TEST_ABI_TRUE@check-abi: abi_check baseline_symbols current_symbols.txt
-@GLIBCPP_TEST_ABI_TRUE@	-@(./abi_check --check ./current_symbols.txt ${baseline_file})
+@GLIBCPP_TEST_ABI_TRUE@	-@(./abi_check --check ./current_symbols.txt ${baseline_file} \
+@GLIBCPP_TEST_ABI_TRUE@	2>&1 | tee libstdc++-v3-abi.sum)
 
 @GLIBCPP_TEST_ABI_TRUE@check-abi-verbose: abi_check baseline_symbols current_symbols.txt 
-@GLIBCPP_TEST_ABI_TRUE@	-@(./abi_check --check-verbose ./current_symbols.txt ${baseline_file})
+@GLIBCPP_TEST_ABI_TRUE@	-@(./abi_check --check-verbose ./current_symbols.txt ${baseline_file} \
+@GLIBCPP_TEST_ABI_TRUE@	2>&1 | tee libstdc++-v3-abi.sum)
 @GLIBCPP_TEST_ABI_FALSE@check-abi:
 @GLIBCPP_TEST_ABI_FALSE@check-abi-verbose:
 
